--- a/src/components/stylesheets/footer.css
+++ b/src/components/stylesheets/footer.css
@@ -31,6 +31,10 @@ footer i:first-child {
   padding-left: 0;
 }
 
+.subscribe {
+  display: none;
+}
+
 .subscribe > input {
   margin-right: 5px;
 }
