--- a/src/components/stylesheets/layout.css
+++ b/src/components/stylesheets/layout.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Muli:400,600,800&display=swap');
 
 * {
   margin: 0;
   border: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Muli', -apple-system, BlinkMacSystemFont, sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
@@ -24,7 +24,7 @@ body,
 #___gatsby,
 div[role="group"][tabindex],
 .main-container {
-  min-height: 150vh;
+  height: 100vh;
   width: 100vw;
   line-height: 1.6;
   overflow-x: hidden;
@@ -51,7 +51,7 @@ input, textarea {
 button {
   background-color: #30353D;
   color: #fff;
-  font-weight: 800;
+  font-weight: 600;
 }
 
 textarea {
@@ -65,12 +65,12 @@ textarea {
 }
 
 main {
-  min-height: 100vh;
-  margin: 0 5%;
+  min-height: 55vh;
+  margin: 0 20%;
 }
 
 header {
-  padding: 3% 5%;
+  padding: 3% 8%;
 }
 
 footer {
@@ -79,8 +79,8 @@ footer {
  display: flex;
  min-height: 50vh;
  width: 100vw;
- padding: 6% 5%;
- margin-top: 12vh;
+ padding: 6% 8%;
+ margin-top: 5%;
  background-color: #1A1D20;
  color: #f1f1f1;
  float: right;
@@ -112,10 +112,11 @@ h4,
 h5,
 h6 {
   margin: 1.1em 0px;
+  line-height: 36px;
 }
 
 p {
-  line-height: 1.6;
+  line-height: 26px;
   font-size: 16px;
   margin: 1em 0px;
 }
@@ -126,7 +127,7 @@ ul {
 }
 
 li {
-  line-height: 1.6;
+  line-height: 26px;
 }
 
 li > a {
@@ -137,19 +138,24 @@ li > a:hover {
   color: #afcfff;
 }
 
-#hero-img{
-  margin: 0px auto;
-}
-
 .excerpt {
   display: flex;
-  width: 80%;
-  margin: auto;
-  margin-bottom: 12em;
+  width: 100%;
+  height: 500px;
+  margin: 0 auto;
 }
 
 .excerpt > * {
-  width: 50%
+  width: 50%;
+}
+
+#hero-img {
+  height: inherit;
+}
+
+#hero-img > img {
+  height: auto;
+  max-width: 100%;
 }
 
 .underline {
@@ -179,4 +185,62 @@ li > a:hover {
 .card-grid > * {
   width: 25%;
   padding: 1.5%;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* Mobile Styles */
+@media only screen and (max-width: 700px) {
+  body {
+  }
+
+  header {
+    padding: 3% 5%;
+  }
+
+  footer {
+    padding: 5% 6%;
+  }
+
+  main {
+    margin: 0 6%;
+  }
+
+  .excerpt {
+    flex-direction: column;
+  }
+
+  .excerpt > * {
+    width: 100%;
+  }
+
+  .card-grid > * {
+    width: 100%;
+    padding: 1.5%;
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 700px) and (max-width: 1250px) {
+  body {
+  }
+
+  main {
+    margin: 0 8%;
+  }
+
+  .card-grid > * {
+    width: 33.33%;
+    padding: 1.5%;
+  }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 1250px) {
+  body {
+  }
 }
