--- a/src/components/stylesheets/layout.css
+++ b/src/components/stylesheets/layout.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Muli:400,600,800&display=swap');
 
+#disclaimer {
+  border-top: 1px solid grey;
+  padding-top: 2em;
+  margin-top: 2em;
+}
+
 * {
   margin: 0;
   border: 0;
@@ -123,7 +129,7 @@ p {
 
 ul {
   margin-left: 2vw;
-  list-style-type: circle;
+  list-style-type: disc;
 }
 
 li {
@@ -175,6 +181,11 @@ li > a:hover {
 .link {
   color: #1d1dff;
   border-bottom: 1px solid #1d1dff;
+}
+
+.wrap-grid {
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card-grid {
